# sweptvolumes

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example_data/: 10146-94201.csv  10146-94201.mtl  example.blend
src/: common.h  config.cpp  config.h  csv_reader.cpp  csv_reader.h  grid_cell.h  grid_structure.h  main.cpp  mesh.h  obj_reader.cpp  obj_reader.h  obj_writer.cpp  obj_writer.h  process_mesh.cpp  process_mesh.h  simplify.cpp  simplify.h  tranform.h  transform.cpp  transform.h  write_file.cpp  write_file.h
